[gd_scene load_steps=33 format=2]

[ext_resource path="res://theme/components/bag_button.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/backgrounds/cave_inside_169x98.png" type="Texture" id=2]
[ext_resource path="res://scenes/Encounter/Encounter.gd" type="Script" id=3]
[ext_resource path="res://theme/components/fight_button.tres" type="StyleBox" id=4]
[ext_resource path="res://theme/components/run_button.tres" type="StyleBox" id=5]
[ext_resource path="res://theme/components/team_button.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/interface/massive_crisp_cabbage.png" type="Texture" id=7]
[ext_resource path="res://theme/fonts/Heading1.tres" type="DynamicFont" id=8]
[ext_resource path="res://theme/fonts/Heading2.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/interface/sour_bottle.png" type="Texture" id=10]
[ext_resource path="res://assets/fonts/Kenney Pixel.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://assets/music/fight_by_magic_spark.mp3" type="AudioStream" id=12]
[ext_resource path="res://theme/monsterfangen.tres" type="Theme" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.588235 )
border_width_left = 3
border_width_top = 2
border_width_right = 3
border_width_bottom = 5
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.85098, 0.85098, 0.85098, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.768627, 0.768627, 0.768627, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.85098, 0.85098, 0.85098, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.768627, 0.768627, 0.768627, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="DynamicFont" id=5]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 0.235294 )
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=6]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 0.235294 )
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 30.0
content_margin_right = 30.0
content_margin_top = 40.0
content_margin_bottom = 40.0
bg_color = Color( 0.51, 0.24378, 0.2346, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.39, 0.19734, 0.1872, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0, 0, 0, 0.254902 )
shadow_size = 2
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 30.0
content_margin_right = 30.0
content_margin_top = 40.0
content_margin_bottom = 40.0
bg_color = Color( 0.46, 0.21988, 0.2116, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.34, 0.169093, 0.1632, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0, 0, 0, 0.254902 )
shadow_size = 2
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 30.0
content_margin_right = 30.0
content_margin_top = 40.0
content_margin_bottom = 40.0
bg_color = Color( 0.61, 0.409513, 0.4026, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.49, 0.34104, 0.3332, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0, 0, 0, 0.254902 )
shadow_size = 2
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.7, 0.4998, 0.336, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.65, 0.453375, 0.2925, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color( 0, 0, 0, 0.254902 )
shadow_size = 2
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.65, 0.4641, 0.312, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.6, 0.4185, 0.27, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color( 0, 0, 0, 0.254902 )
shadow_size = 2
shadow_offset = Vector2( 1, 1 )

[sub_resource type="DynamicFont" id=12]
size = 25
outline_size = 2
outline_color = Color( 0, 0, 0, 0.172549 )
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.3068, 0.52392, 0.59, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.2499, 0.453645, 0.51, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color( 0, 0, 0, 0.254902 )
shadow_size = 2
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.2808, 0.48384, 0.54, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.2254, 0.40917, 0.46, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color( 0, 0, 0, 0.254902 )
shadow_size = 2
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.38375, 0.5, 0.345, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.3212, 0.44, 0.2816, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color( 0, 0, 0, 0.254902 )
shadow_size = 2
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.345375, 0.45, 0.3105, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.2847, 0.39, 0.2496, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color( 0, 0, 0, 0.254902 )
shadow_size = 2
shadow_offset = Vector2( 1, 1 )

[sub_resource type="Animation" id=17]
resource_name = "fade_out_music"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("MusicPlayer:volume_db")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[sub_resource type="Animation" id=19]
resource_name = "take_damage_enemy"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/EncounterUI/VSplitContainer/MonsterContainer/EnemyMarginContainer/EnemyContainer/EnemySpriteContainer/EnemySprite:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -10, 0 ), Vector2( 0, 0 ), Vector2( 10, 0 ), Vector2( 0, 0 ), Vector2( -10, 0 ), Vector2( 0, 0 ), Vector2( 10, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "take_damage_player"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/EncounterUI/VSplitContainer/MonsterContainer/PlayerMarginContainer/PlayerContainer/PlayerSpriteContainer/PlayerSprite:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -10, 0 ), Vector2( 0, 0 ), Vector2( 10, 0 ), Vector2( 0, 0 ), Vector2( -10, 0 ), Vector2( 0, 0 ), Vector2( 10, 0 ), Vector2( 0, 0 ) ]
}

[node name="Encounter" type="Node2D"]
script = ExtResource( 3 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
autoplay = true

[node name="SoundEffectPlayer" type="AudioStreamPlayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="BackgroundImage" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EncounterUI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="CanvasLayer/EncounterUI"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MonsterContainer" type="VBoxContainer" parent="CanvasLayer/EncounterUI/VSplitContainer"]
margin_right = 400.0
margin_bottom = 494.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="EnemyMarginContainer" type="MarginContainer" parent="CanvasLayer/EncounterUI/VSplitContainer/MonsterContainer"]
margin_right = 400.0
margin_bottom = 245.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="EnemyContainer" type="HBoxContainer" parent="CanvasLayer/EncounterUI/VSplitContainer/MonsterContainer/EnemyMarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 235.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EnemyInfo" type="VBoxContainer" parent="CanvasLayer/EncounterUI/VSplitContainer/MonsterContainer/EnemyMarginContainer/EnemyContainer"]
margin_right = 188.0
margin_bottom = 225.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EnemyName" type="Label" parent="CanvasLayer/EncounterUI/VSplitContainer/MonsterContainer/EnemyMarginContainer/EnemyContainer/EnemyInfo"]
margin_right = 188.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 8 )
text = "EnemyName"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyLevel" type="Label" parent="CanvasLayer/EncounterUI/VSplitContainer/MonsterContainer/EnemyMarginContainer/EnemyContainer/EnemyInfo"]
margin_top = 28.0
margin_right = 188.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 9 )
text = "EnemyLevel"

[node name="EnemyHealth" type="ProgressBar" parent="CanvasLayer/EncounterUI/VSplitContainer/MonsterContainer/EnemyMarginContainer/EnemyContainer/EnemyInfo"]
margin_top = 49.0
margin_right = 188.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 5 )
step = 1.0
percent_visible = false

[node name="EnemySpriteContainer" type="MarginContainer" parent="CanvasLayer/EncounterUI/VSplitContainer/MonsterContainer/EnemyMarginContainer/EnemyContainer"]
margin_left = 192.0
margin_right = 380.0
margin_bottom = 225.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 10
custom_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="CanvasLayer/EncounterUI/VSplitContainer/MonsterContainer/EnemyMarginContainer/EnemyContainer/EnemySpriteContainer"]
visible = false
margin_left = 10.0
margin_right = 188.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_styles/panel = SubResource( 1 )

[node name="EnemySprite" type="TextureRect" parent="CanvasLayer/EncounterUI/VSplitContainer/MonsterContainer/EnemyMarginContainer/EnemyContainer/EnemySpriteContainer"]
margin_left = 10.0
margin_right = 188.0
margin_bottom = 225.0
rect_min_size = Vector2( 150, 150 )
rect_pivot_offset = Vector2( 75, 75 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="PlayerMarginContainer" type="MarginContainer" parent="CanvasLayer/EncounterUI/VSplitContainer/MonsterContainer"]
margin_top = 249.0
margin_right = 400.0
margin_bottom = 494.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="PlayerContainer" type="HBoxContainer" parent="CanvasLayer/EncounterUI/VSplitContainer/MonsterContainer/PlayerMarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 235.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerSpriteContainer" type="MarginContainer" parent="CanvasLayer/EncounterUI/VSplitContainer/MonsterContainer/PlayerMarginContainer/PlayerContainer"]
margin_right = 188.0
margin_bottom = 225.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="PlayerSprite" type="TextureRect" parent="CanvasLayer/EncounterUI/VSplitContainer/MonsterContainer/PlayerMarginContainer/PlayerContainer/PlayerSpriteContainer"]
margin_right = 178.0
margin_bottom = 225.0
rect_min_size = Vector2( 150, 150 )
rect_pivot_offset = Vector2( 75, 75 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="PlayerInfo" type="VBoxContainer" parent="CanvasLayer/EncounterUI/VSplitContainer/MonsterContainer/PlayerMarginContainer/PlayerContainer"]
margin_left = 192.0
margin_right = 380.0
margin_bottom = 225.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerName" type="Label" parent="CanvasLayer/EncounterUI/VSplitContainer/MonsterContainer/PlayerMarginContainer/PlayerContainer/PlayerInfo"]
margin_right = 188.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 8 )
text = "PlayerName"

[node name="PlayerLevel" type="Label" parent="CanvasLayer/EncounterUI/VSplitContainer/MonsterContainer/PlayerMarginContainer/PlayerContainer/PlayerInfo"]
margin_top = 28.0
margin_right = 188.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 9 )
text = "PlayerLevel"

[node name="PlayerHealth" type="ProgressBar" parent="CanvasLayer/EncounterUI/VSplitContainer/MonsterContainer/PlayerMarginContainer/PlayerContainer/PlayerInfo"]
margin_top = 49.0
margin_right = 188.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 5 )
step = 1.0
percent_visible = false

[node name="PlayerHealthText" type="Label" parent="CanvasLayer/EncounterUI/VSplitContainer/MonsterContainer/PlayerMarginContainer/PlayerContainer/PlayerInfo"]
margin_top = 58.0
margin_right = 188.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 9 )
text = "??? / ???"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="VBoxContainer" parent="CanvasLayer/EncounterUI/VSplitContainer"]
margin_top = 506.0
margin_right = 400.0
margin_bottom = 800.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/EncounterUI/VSplitContainer/ButtonContainer"]
margin_right = 400.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 56 )
custom_styles/panel = SubResource( 2 )

[node name="DialogText" type="RichTextLabel" parent="CanvasLayer/EncounterUI/VSplitContainer/ButtonContainer/PanelContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 390.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "MISSING_TXT
MISSING_TXT"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/EncounterUI/VSplitContainer/ButtonContainer"]
margin_top = 60.0
margin_right = 400.0
margin_bottom = 294.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )

[node name="ButtonsContainer" type="GridContainer" parent="CanvasLayer/EncounterUI/VSplitContainer/ButtonContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FightButtonMarginContainer" type="MarginContainer" parent="CanvasLayer/EncounterUI/VSplitContainer/ButtonContainer/Panel/ButtonsContainer"]
margin_right = 400.0
margin_bottom = 135.0
size_flags_horizontal = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 5

[node name="AttacksContainer" type="GridContainer" parent="CanvasLayer/EncounterUI/VSplitContainer/ButtonContainer/Panel/ButtonsContainer/FightButtonMarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 380.0
margin_bottom = 130.0
columns = 2

[node name="FightButton2" type="Button" parent="CanvasLayer/EncounterUI/VSplitContainer/ButtonContainer/Panel/ButtonsContainer/FightButtonMarginContainer/AttacksContainer"]
visible = false
margin_right = 178.0
margin_bottom = 103.0
size_flags_horizontal = 3
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "FIGHT"

[node name="FightButton3" type="Button" parent="CanvasLayer/EncounterUI/VSplitContainer/ButtonContainer/Panel/ButtonsContainer/FightButtonMarginContainer/AttacksContainer"]
visible = false
margin_left = 182.0
margin_right = 360.0
margin_bottom = 110.0
size_flags_horizontal = 3
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 6 )
text = "FIGHT"

[node name="FightButton4" type="Button" parent="CanvasLayer/EncounterUI/VSplitContainer/ButtonContainer/Panel/ButtonsContainer/FightButtonMarginContainer/AttacksContainer"]
visible = false
margin_top = 114.0
margin_right = 178.0
margin_bottom = 224.0
size_flags_horizontal = 3
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 6 )
text = "FIGHT"

[node name="FightButton5" type="Button" parent="CanvasLayer/EncounterUI/VSplitContainer/ButtonContainer/Panel/ButtonsContainer/FightButtonMarginContainer/AttacksContainer"]
visible = false
margin_left = 182.0
margin_top = 114.0
margin_right = 360.0
margin_bottom = 224.0
size_flags_horizontal = 3
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 6 )
text = "FIGHT"

[node name="FightButton" type="Button" parent="CanvasLayer/EncounterUI/VSplitContainer/ButtonContainer/Panel/ButtonsContainer/FightButtonMarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 380.0
margin_bottom = 130.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 6 )
text = "FIGHT"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/EncounterUI/VSplitContainer/ButtonContainer/Panel/ButtonsContainer"]
margin_top = 145.0
margin_right = 400.0
margin_bottom = 234.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 15

[node name="OtherButtonsContainer" type="HBoxContainer" parent="CanvasLayer/EncounterUI/VSplitContainer/ButtonContainer/Panel/ButtonsContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 380.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15

[node name="BagButton" type="Button" parent="CanvasLayer/EncounterUI/VSplitContainer/ButtonContainer/Panel/ButtonsContainer/MarginContainer/OtherButtonsContainer"]
margin_right = 110.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = SubResource( 12 )
text = "BAG"

[node name="RunButton" type="Button" parent="CanvasLayer/EncounterUI/VSplitContainer/ButtonContainer/Panel/ButtonsContainer/MarginContainer/OtherButtonsContainer"]
margin_left = 125.0
margin_right = 235.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 12 )
text = "RUN"

[node name="TeamButton" type="Button" parent="CanvasLayer/EncounterUI/VSplitContainer/ButtonContainer/Panel/ButtonsContainer/MarginContainer/OtherButtonsContainer"]
margin_left = 250.0
margin_right = 360.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 12 )
text = "TEAM"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_out_music = SubResource( 17 )
anims/take_damage_enemy = SubResource( 19 )
anims/take_damage_player = SubResource( 18 )

[connection signal="button_up" from="CanvasLayer/EncounterUI/VSplitContainer/ButtonContainer/Panel/ButtonsContainer/FightButtonMarginContainer/FightButton" to="." method="_on_FightButton_button_up"]
[connection signal="button_up" from="CanvasLayer/EncounterUI/VSplitContainer/ButtonContainer/Panel/ButtonsContainer/MarginContainer/OtherButtonsContainer/RunButton" to="." method="_on_RunButton_button_up"]
